--- a/backlink-checker.html
+++ b/backlink-checker.html
@@ -9,15 +9,16 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet" />
 
-    <title>Website Speed Test Tool : Check Your Site's Speed</title>
+    <title>Free Backlink Checker without any limitation</title>
     <meta
       name="description"
-      content="Test you website spped for free. Website Speed checker | Free SEO Tool" />
+      content="Find out who links to your site with our free backlink checker. Free SEO tool to build links and boost your rankings. No log-in requirements" />
 
     <link
       rel="shortcut icon"
       href="/assets/images/favicon.png"
       type="image/x-icon" />
+
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <!-- Additional CSS Files -->
     <link rel="stylesheet" href="assets/css/fontawesome.css" />
@@ -73,20 +74,21 @@
     </header>
     <!-- ***** Header Area End ***** -->
     <div class="page-heading header-text">
-      <h1 id="main-title">Website Speed Checker</h1>
+      <h1 id="main-title">
+        Check backlinks of any website or domain for free!
+      </h1>
     </div>
 
     <!-- Main Tool -->
     <div id="tool-box" class="section container">
       <iframe
-        width="100%"
-        height="500"
         allowtransparency="true"
         frameborder="0"
-        id="a90e74"
+        height="200"
+        id="cfeb6c"
         scrolling="no"
-        src="https://bailey.sh/demo/seostudio/embed?id=speed-test&r=a90e74&cookies=0"
-        allow="clipboard-write"></iframe>
+        src="https://bailey.sh/demo/seostudio/embed.php?id=new-backlinks&amp;h=0&amp;r=cfeb6c"
+        width="1100"></iframe>
 
       <script type="text/javascript">
         (function (id) {
@@ -106,29 +108,36 @@
             },
             false
           );
-        })("a90e74");
+        })("cfeb6c");
       </script>
       <br />
-
       <div id="tool-detail">
+        <h3>Backlink Checker: What is it?</h3>
         <p>
-          <strong>Website Speed Test Tool</strong> can be very helpful to
-          analyze your website's loading speed (how fast your site gets loaded)
-          and optimize it to make it fast. It will also give the complete report
-          about all types of content (e.g., scripts, images, documents, etc.)
-          size present on your site. This online tool is completely free to use.
+          A backlink checker is a tool that lets you look at a website's or a
+          particular page's backlinks. It aids in your comprehension of the
+          websites that connect to your website and how they affect your search
+          engine results.
         </p>
         <br />
-        <h3>How to Use?</h3>
+
+        <h3>These resources can assist you in recognizing:</h3>
         <ul>
+          <li><p>How many backlinks there are to your website</p></li>
+          <li><p>How well the backlinks are constructed</p></li>
+          <li><p>In the links, the anchor text</p></li>
+          <li><p>The links' original source</p></li>
           <li>
             <p>
-              Enter your website link (e.g., https://example.com or example.com)
+              The pages with the highest number of backlinks on your website
             </p>
           </li>
-          <li><p>Click on the submit button</p></li>
-          <li><p>Select your targated location and then click test.</p></li>
         </ul>
+        <p>
+          You may also use backlink checker tools to find low-quality backlinks
+          that should be eliminated because they may be negatively affecting
+          your search engine rankings.
+        </p>
       </div>
     </div>
 
