--- a/index.html
+++ b/index.html
@@ -1,11 +1,312 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet" />
+
+    <title>TOOLS69.GITHUB.IO</title>
+    <meta name="description" content="" />
+    <link
+      rel="shortcut icon"
+      href="/assets/images/favicon.png"
+      type="image/x-icon" />
+    <!-- Bootstrap core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+
+    <!-- Additional CSS Files -->
+    <link rel="stylesheet" href="assets/css/fontawesome.css" />
+    <link rel="stylesheet" href="assets/css/templatemo-lugx-gaming.css" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
+  </head>
+
+  <body>
+    <!-- ***** Preloader Start ***** -->
+    <div id="js-preloader" class="js-preloader">
+      <div class="preloader-inner">
+        <span class="dot"></span>
+        <div class="dots">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+      </div>
+    </div>
+    <!-- ***** Preloader End ***** -->
+
+    <!-- ***** Header Area Start ***** -->
+    <header class="header-area header-sticky">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <nav class="main-nav">
+              <!-- ***** Logo Start ***** -->
+              <a href="https://tools69.github.io/" class="logo">
+                <img
+                  src="assets/images/Tools69-GitHub.webp"
+                  alt=""
+                  style="width: 158px" />
+              </a>
+              <!-- ***** Logo End ***** -->
+              <!-- ***** Menu Start ***** -->
+              <ul class="nav">
+                <li><a href="/" class="active">Home</a></li>
+                <li><a href="/pages/contact.html">Contact Us</a></li>
+                <li><a href="/pages/about.html">About Us</a></li>
+                <li><a href="/pages/privacy-policy.html">Privacy Policy</a></li>
+              </ul>
+              <a class="menu-trigger">
+                <span>Menu</span>
+              </a>
+              <!-- ***** Menu End ***** -->
+            </nav>
+          </div>
+        </div>
+      </div>
+    </header>
+    <!-- ***** Header Area End ***** -->
+
+    <div class="main-banner">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6 align-self-center">
+            <div class="caption header-text">
+              <h6>Welcome to TOOLS69</h6>
+              <h2>Explore Web Applications for Free!</h2>
+              <p>
+                Tools69 is a platform where you will get various web tools
+                related to SEO, Digital Marketing, Web Optimization and many
+                more. All of these at zero cost!
+              </p>
+
+              <a href="#featured-tools" class="button">Discover Tools</a>
+            </div>
+          </div>
+          <div class="col-lg-4 offset-lg-2">
+            <!-- <div class="right-image">
+            <img src="assets/images/Tools69-banner.webp" alt="Banner Image of Tools69">
+            <span class="price">Free</span>
+            <span class="offer">Free!</span>
+          </div> -->
+            <path d="..." stroke-dashoffset="100%">
+              <animate
+                attributeName="stroke-dasharray"
+                dur="20s"
+                values="80%;120%;80%"
+                repeatCount="indefinite" />
+            </path>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="features">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-3 col-md-6">
+            <div class="item">
+              <div class="image">
+                <img
+                  src="assets/images/free.png"
+                  alt="Free to use"
+                  style="max-width: 44px" />
+              </div>
+              <h4>Free to Use</h4>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6">
+            <div class="item">
+              <div class="image">
+                <img
+                  src="assets/images/safe.png"
+                  alt="Safe"
+                  style="max-width: 44px" />
+              </div>
+              <h4>Safe</h4>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6">
+            <div class="item">
+              <div class="image">
+                <img
+                  src="assets/images/no-signin.png"
+                  alt="No Sign-in Required"
+                  style="max-width: 44px" />
+              </div>
+              <h4>No Sign-in Required</h4>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6">
+            <div class="item">
+              <div class="image">
+                <img
+                  src="assets/images/easy-layout.png"
+                  alt="Easy Layout"
+                  style="max-width: 44px" />
+              </div>
+              <h4>Easy Layout</h4>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Tools List -->
+    <div class="section trending" id="featured-tools">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6">
+            <div class="section-heading">
+              <h6>Trending</h6>
+              <h2>Featured Tools</h2>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <!-- <div class="main-button">
+            <a href="shop.html">View All</a>
+          </div> -->
+          </div>
+
+          <!-- Tools Bucket -->
+          <div class="col-lg-3 col-md-6">
+            <div class="item">
+              <a href="/backlink-checker.html">
+                <div class="thumb">
+                  <img src="assets/images/backlink-checker.webp" alt="" />
+                  <!-- <span class="price">$44</span> -->
+                </div>
+                <div class="down-content">
+                  <span class="category">Action</span>
+                  <h4>Free Backlink Checker</h4>
+                </div>
+              </a>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6">
+            <div class="item">
+              <a href="/website-speed-test.html">
+                <div class="thumb">
+                  <img
+                    src="assets/images/website-speed-test-tool.webp"
+                    alt="" />
+                  <!-- <span class="price">$44</span> -->
+                </div>
+                <div class="down-content">
+                  <span class="category">Action</span>
+                  <h4>Website Speed Test Tool</h4>
+                </div>
+              </a>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6">
+            <div class="item">
+              <a href="/keyword-research-tool.html">
+                <div class="thumb">
+                  <img
+                    src="/assets/images/free-keyword-research-tool.webp"
+                    alt="Keyword Research Tool for SEO" />
+                  <!-- <span class="price">$44</span> -->
+                </div>
+                <div class="down-content">
+                  <span class="category">Action</span>
+                  <h4>Free Keyword Research Tool</h4>
+                </div>
+              </a>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6">
+            <div class="item">
+              <a href="/html-to-xml-parse-code.html">
+                <div class="thumb">
+                  <img
+                    src="assets/images/XML-Parse-Code-Converter.webp"
+                    alt="HTML to XML Parse Code Converter for Blogger" />
+                  <!-- <span class="price">$44</span> -->
+                </div>
+                <div class="down-content">
+                  <span class="category">Action</span>
+                  <h4>XML Parse Code Converter for Blogger</h4>
+                </div>
+              </a>
+            </div>
+          </div>
+          <!-- Tools Bucket End -->
+        </div>
+      </div>
+    </div>
+
+    <div class="section cta">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-5">
+            <div class="shop">
+              <div class="row">
+                <div class="col-lg-12">
+                  <div class="section-heading">
+                    <p class="h2" style="font-size: xx-large">
+                      More Tools are <em>Coming Soon</em> For You!
+                    </p>
+                  </div>
+                  <p>Thanks for visiting our site. Hope you have a nice day.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- <div class="col-lg-5 offset-lg-2 align-self-end">
+          <div class="subscribe">
+            <div class="row">
+              <div class="col-lg-12">
+                <div class="section-heading">
+                  <h6>NEWSLETTER</h6>
+                  <h2>Get Up To $100 Off Just Buy <em>Subscribe</em> Newsletter!</h2>
+                </div>
+                <div class="search-input">
+                  <form id="subscribe" action="#">
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Your email...">
+                    <button type="submit">Subscribe Now</button>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div> -->
+        </div>
+      </div>
+    </div>
+
+    <footer>
+      <div class="container">
+        <div class="col-lg-12">
+          <p>
+            Copyright ©
+            <script>
+              document.write(new Date().getFullYear());
+            </script>
+            Tools69.GitHub.io | All rights reserved. &nbsp;&nbsp;
+          </p>
+        </div>
+      </div>
+    </footer>
+
+    <!-- Scripts -->
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/isotope.min.js"></script>
+    <script src="assets/js/owl-carousel.js"></script>
+    <script src="assets/js/counter.js"></script>
+    <script src="assets/js/custom.js"></script>
+  </body>
 </html>
