--- a/keyword-research-tool.html
+++ b/keyword-research-tool.html
@@ -9,10 +9,10 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet" />
 
-    <title>Website Speed Test Tool : Check Your Site's Speed</title>
+    <title>Free Keyword Research Tool for SEO</title>
     <meta
       name="description"
-      content="Test you website spped for free. Website Speed checker | Free SEO Tool" />
+      content="Boost your website ranking with our free SEO keyword research tool | Free to use | No sing-in required" />
 
     <link
       rel="shortcut icon"
@@ -73,7 +73,9 @@
     </header>
     <!-- ***** Header Area End ***** -->
     <div class="page-heading header-text">
-      <h1 id="main-title">Website Speed Checker</h1>
+      <h1 id="main-title">
+        Free Keyword Research Tool for SEO: Helps Your Site to Rank Fast!
+      </h1>
     </div>
 
     <!-- Main Tool -->
@@ -83,9 +85,9 @@
         height="500"
         allowtransparency="true"
         frameborder="0"
-        id="a90e74"
+        id="cb3d63"
         scrolling="no"
-        src="https://bailey.sh/demo/seostudio/embed?id=speed-test&r=a90e74&cookies=0"
+        src="https://bailey.sh/demo/seostudio/embed?id=keyword-research&r=cb3d63&cookies=0"
         allow="clipboard-write"></iframe>
 
       <script type="text/javascript">
@@ -106,28 +108,26 @@
             },
             false
           );
-        })("a90e74");
+        })("cb3d63");
       </script>
-      <br />
+      <br /><br /><br />
 
       <div id="tool-detail">
         <p>
-          <strong>Website Speed Test Tool</strong> can be very helpful to
-          analyze your website's loading speed (how fast your site gets loaded)
-          and optimize it to make it fast. It will also give the complete report
-          about all types of content (e.g., scripts, images, documents, etc.)
-          size present on your site. This online tool is completely free to use.
+          Are you trying to find the ideal keywords for your blog? You may get
+          blog ideas, low-competition keywords, monthly search traffic, ranking
+          difficulty, and much more with our
+          <strong>free keyword research tool</strong>! Finding keywords with
+          high demand and little competition is the main goal of keyword
+          research. We make it simple for you to identify the ideal keywords.
+          Our <b>keyword research tool</b> is fully free to use; we don't
+          restrict users by putting any limitation.
         </p>
         <br />
-        <h3>How to Use?</h3>
+        <h3>What this tool offers:</h3>
         <ul>
-          <li>
-            <p>
-              Enter your website link (e.g., https://example.com or example.com)
-            </p>
-          </li>
-          <li><p>Click on the submit button</p></li>
-          <li><p>Select your targated location and then click test.</p></li>
+          <li><p>Volume of the keyword for any targeted region.</p></li>
+          <li><p>CPC of that keyword.</p></li>
         </ul>
       </div>
     </div>
