--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet" />
 
     <title>TOOLS69.GITHUB.IO</title>
-    <meta name="description" content="" />
+    <meta name="description" content="Discover a wide range of free online tools with Tools69.GitHub.io | Boost your productivity with our free easy-to-use applications." />
     <link
       rel="shortcut icon"
       href="/assets/images/favicon.png"
