--- a/backlink-checker.html
+++ b/backlink-checker.html
@@ -85,11 +85,11 @@
         <iframe
           allowtransparency="true"
           frameborder="0"
-          height="200"
+          height="auto"
           id="cfeb6c"
           scrolling="no"
           src="https://bailey.sh/demo/seostudio/embed.php?id=new-backlinks&amp;h=0&amp;r=cfeb6c"
-          width="1100"></iframe>
+          width="100%"></iframe>
   
         <script type="text/javascript">
           (function (id) {
